cncProd/force-app/main/default/objects/Special_Tool_Booking__c/Special_Tool_Booking__c.object-meta.xml
<CustomObject>
    <label>Special Tool Booking</label>
    <nameField>
        <displayFormat>Booking-{0000}</displayFormat>
        <label>Special Tool Booking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Special Tool Bookings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>