cncProd/force-app/main/default/objects/Special_Tool_Booking__c/fields/Borrow_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Borrow_DateTime__c</fullName>
    <label>Borrowed Date and Time</label>
    <type>DateTime</type>
</CustomField>