cncProd/force-app/main/default/objects/Special_Tool_Booking__c/fields/Borrowed_Location__c.field-meta.xml
<CustomField>
    <fullName>Borrowed_Location__c</fullName>
    <label>Borrowed Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Service_Centre_Location</valueSetName>
    </valueSet>
</CustomField>