cncProd/force-app/main/default/objects/Special_Tool_Booking__c/fields/Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Part_Number__c</fullName>
    <formula>Special_Tool__r.Part_Number__c</formula>
    <label>Part Number</label>
    <type>Text</type>
</CustomField>