cncProd/force-app/main/default/objects/Special_Tool_Booking__c/fields/Special_Tool__c.field-meta.xml
<CustomField>
    <fullName>Special_Tool__c</fullName>
    <label>Special Tool</label>
    <referenceTo>Special_Tool__c</referenceTo>
    <relationshipName>Special_Tools_Bookings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>