cncProd/force-app/main/default/objects/Special_Tool_Booking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Special_Tool__c</columns>
    <columns>Part_Number__c</columns>
    <columns>Borrowed_By__c</columns>
    <columns>Borrowed_Location__c</columns>
    <columns>Borrow_DateTime__c</columns>
    <columns>Returned_By__c</columns>
    <columns>Returned_Location__c</columns>
    <columns>Return_DateTime__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>